# CTestsIC

ann/: ann.c  layer.c  rdata.c
doublets/: doublets.c  trie.c
eliza/: map.c  string_utils.c
gogen/: CMakeLists.txt  Makefile  gogen-challenge.txt  gogen-easy.txt  gogen.c  gogen.h  letter_mask.c  letter_mask.h  testA.c  testB.c
heapsort/PartI/: binaryheap.c  heapsort.c
heapsort/PartII/: program.c
heighwaydragon/PartI/: dragon.c
heighwaydragon/PartII/: program.c
huffmancoding/: exam.c
laser/: CMakeLists.txt  Makefile  biscuit.txt  laser.c  laser.h  test.c
region/skeleton/: list.c  region.c
sonnets/: .cbuild  CMakeLists.txt  Makefile  maps.c  maps.h  sonnets.c  sonnets.h  spenser.txt  testA.c  testB.c  trie.c  trie.h
